--- a/globalConfig.json
+++ b/globalConfig.json
@@ -942,6 +942,26 @@
                             ]
                         },
                         {
+                            "field": "filter",
+                            "label": "Query Parameters (optional)",
+                            "help": "Example: $expand=members",
+                            "required": false,
+                            "type": "text",
+                            "validators": [
+                                {
+                                    "type": "string",
+                                    "minLength": 0,
+                                    "maxLength": 8192,
+                                    "errorMsg": "Max length of text input is 8192"
+                                },
+                                {
+                                    "type": "regex",
+                                    "errorMsg": "Value must start with $",
+                                    "pattern": "^\\$"
+                                }
+                            ]
+                        },
+                        {
                             "field": "environment",
                             "label": "Environment",
                             "help": "",
