feat: disable TRUNCATE on Azure AD groups

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -87,6 +87,16 @@ FIELDALIAS-azure_aad_user_user_id = userPrincipalName AS user_id
 EVAL-vendor_product = "Microsoft Azure Active Directory"
 DATETIME_CONFIG = CURRENT
 
+[azure:aad:group]
+SHOULD_LINEMERGE = 0
+TRUNCATE = 0
+DATETIME_CONFIG = CURRENT
+
+[ms:aad:group]
+SHOULD_LINEMERGE = 0
+TRUNCATE = 0
+DATETIME_CONFIG = CURRENT
+
 [ms:aad:audit]
 SHOULD_LINEMERGE = 0
 TIME_PREFIX = \"activityDateTime\"\:\s*\"
@@ -236,26 +246,6 @@ sourcetype = tamsaad:log
 
 [source::...dismiss_azure_alert_modalert.log*]
 sourcetype = tamsaad:log
-
-[ms:aad:group]
-SHOULD_LINEMERGE = 0
-# CIM Authentication
-FIELDALIAS-azure_aad_sign_in_authentication_authentication_method = body.records.properties.authenticationDetails{}.authenticationMethod as authentication_method
-FIELDALIAS-azure_aad_sign_in_authentication_reason = body.records.properties.status.failureReason as reason
-FIELDALIAS-azure_aad_sign_in_authentication_src = body.records.properties.ipAddress AS src
-FIELDALIAS-azure_aad_sign_in_authentication_src_ip = body.records.properties.ipAddress AS src_ip
-FIELDALIAS-azure_aad_sign_in_authentication_user_agent = body.records.properties.userAgent as user_agent
-EVAL-vendor_product = "Microsoft Azure Active Directory"
-EVAL-action = if('body.records.properties.status.errorCode'==0,"success","failure")
-EVAL-app = lower(replace('body.records.properties.appDisplayName', " ", ":"))
-EVAL-dest = if('body.records.properties.resourceDisplayName' == "null","https://login.microsoftonline.com",lower(replace('body.records.properties.resourceDisplayName', " ", ".")))
-EVAL-duration = 'body.records.durationMs'/1000
-EVAL-user = lower('body.records.properties.userPrincipalName')
-EVAL-user_id = lower('body.records.properties.userPrincipalName')
-KV_MODE = json
-MAX_TIMESTAMP_LOOKAHEAD = 30
-TIME_PREFIX = \"body.records.properties.createdDateTime"\:\s*\"
-TRUNCATE = 0
 
 [azure:identity]
 SHOULD_LINEMERGE = 0
