--- a/package/default/app.conf
+++ b/package/default/app.conf
@@ -12,7 +12,7 @@ description = This add-on collects Microsoft Azure including Azure AD, resource 
 
 [ui]
 is_visible = 1
-label = Microsoft Azure Add-on for Splunk
+label = Splunk Add-on for Microsoft Azure
 docs_section_override = AddOns:released
 
 [package]
