--- a/globalConfig.json
+++ b/globalConfig.json
@@ -461,7 +461,7 @@
                             "tooltip": "Azure AD throttling guidance",
                             "options": {
                                 "text": "Azure AD throttling guidance",
-                                "link": "https://splunkbase.splunk.com/app/3757/#/details#throttling-guidance"
+                                "link": "https://github.com/splunk/splunk-add-on-microsoft-azure/tree/main/docs#throttling-guidance"
                             },
                             "required": false
                         },
@@ -1034,7 +1034,7 @@
                             "tooltip": "Azure AD throttling guidance",
                             "options": {
                                 "text": "Azure AD throttling guidance",
-                                "link": "https://splunkbase.splunk.com/app/3757/#/details#throttling-guidance"
+                                "link": "https://github.com/splunk/splunk-add-on-microsoft-azure/tree/main/docs#throttling-guidance"
                             }
                         },
                         {
