fix: remove errant line break in eventtypes.conf
Addresses #19

--- a/package/default/eventtypes.conf
+++ b/package/default/eventtypes.conf
@@ -36,5 +36,4 @@ search = sourcetype="azure:vm:stop"
 search = sourcetype="m365:group:member:add"
 
 [azure_vuln]
-search = (sourcetype=azure:resourcegraph type="microsoft.security/assessments/subAssessments" "properties.additionalData.assessedResourceType"=ServerVulnerability 
-properties.additionalData.cve{}.title=*)
+search = (sourcetype=azure:resourcegraph type="microsoft.security/assessments/subAssessments" "properties.additionalData.assessedResourceType"=ServerVulnerability properties.additionalData.cve{}.title=*)
