chore: update props.conf
Add CIM mapping for userDisplayName in issue #70

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -27,6 +27,8 @@ FIELDALIAS-ms_aad_sign_in_authentication_reason = status.failureReason as reason
 FIELDALIAS-ms_aad_sign_in_authentication_src = ipAddress AS src
 FIELDALIAS-ms_aad_sign_in_authentication_src_ip = ipAddress AS src_ip
 FIELDALIAS-ms_aad_sign_in_authentication_user_agent = UserAgent as user_agent
+FIELDALIAS-ms_aad_sign_in_authentication_user_display_name = userDisplayName AS user_display_name
+EVAL-user_display_name = lower(userDisplayName)
 ## Calculated Fields
 # CIM Common Fields
 EVAL-vendor_product = "Microsoft Azure Active Directory"
