Adding Service Principal Input functionality

--- a/package/default/eventtypes.conf
+++ b/package/default/eventtypes.conf
@@ -6,6 +6,9 @@ search = (sourcetype=ms:aad:user OR sourcetype=azure:aad:user)
 
 [azure_aad_multifactor_auth]
 search = (sourcetype=ms:aad:signin OR sourcetype=azure:aad:signin) "mfaDetail.authDetail"!=null
+
+[azure_aad_service_principal]
+search = sourcetype=azure:aad:service_principal
 # Backward compatibility
 
 [ms_aad_signin]
