--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -99,6 +99,16 @@ SHOULD_LINEMERGE = 0
 TRUNCATE = 0
 DATETIME_CONFIG = CURRENT
 
+[azure:aad:service_principal]
+SHOULD_LINEMERGE = 0
+TRUNCATE = 0
+# CIM Mapping
+FIELDALIAS-azure_aad_user_user = displayName AS user
+FIELDALIAS-azure_aad_user_enabled = accountEnabled AS enabled
+FIELDALIAS-azure_aad_user_user_id = servicePrincipalName AS user_id
+EVAL-vendor_product = "Microsoft Azure Active Directory"
+DATETIME_CONFIG = CURRENT
+
 [ms:aad:audit]
 SHOULD_LINEMERGE = 0
 TIME_PREFIX = \"activityDateTime\"\:\s*\"
