--- a/package/default/tags.conf
+++ b/package/default/tags.conf
@@ -11,6 +11,11 @@ cloud = enabled
 authentication = enabled
 cloud = enabled
 multifactor = enabled
+
+[eventtype=azure_aad_service_principal]
+inventory = enabled
+user = enabled
+cloud = enabled
 # Backward compatibility
 
 [eventtype=ms_aad_signin]
