--- a/package/default/inputs.conf
+++ b/package/default/inputs.conf
@@ -14,6 +14,10 @@ python.version = python3
 endpoint = v1.0
 python.version = python3
 
+[MS_AAD_service_principal]
+endpoint = v1.0
+python.version = python3
+
 [MS_AAD_audit]
 endpoint = v1.0
 python.version = python3
@@ -61,4 +65,3 @@ python.version = python3
 
 [azure_topology_man]
 python.version = python3
-
