feat: added input for Graph Security API

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -154,6 +154,18 @@ TIME_PREFIX = creationTimeUtc"\s*:\s*"
 TIME_FORMAT = %Y-%m-%dT%H:%M:%S.%f%Z
 
 ####################
+# Graph Security API
+####################
+
+[ms:graph:security:alerts]
+SHOULD_LINEMERGE = 0
+TIME_PREFIX = \"lastModifiedDateTime"\:\s*\"
+TIME_FORMAT = %Y-%m-%dT%H:%M:%S.%f%Z
+TRUNCATE = 0
+EXTRACT-graph-security-tenant-id = ms_graph_security:tenant_id:(?P<tenant_id>[^\/]+) in source
+
+
+####################
 # Inventory
 ####################
 
