fix: set default truncate for Entra ID audit
Addresses #64

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -105,6 +105,7 @@ TIME_PREFIX = \"activityDateTime\"\:\s*\"
 MAX_TIMESTAMP_LOOKAHEAD = 30
 KV_MODE = json
 FIELDALIAS-activityDate = activityDateTime AS activityDate
+TRUNCATE = 0
 
 [azure:aad:audit]
 SHOULD_LINEMERGE = 0
@@ -112,6 +113,8 @@ TIME_PREFIX = \"activityDateTime\"\:\s*\"
 MAX_TIMESTAMP_LOOKAHEAD = 30
 KV_MODE = json
 FIELDALIAS-azure_aad_audit_activityDate = activityDateTime AS activityDate
+TRUNCATE = 0
+
 ####################
 # Metrics
 ####################
